add a bunch of stuff to try and look more like production services.